@@ -1,5 +1,9 @@
 2002-01-01  Jeff Freedman  <jeff@amy.nerble.net>
 
+	* exult.cc: Shift-left-click inserts shape from ExultStudio.
+	Dragging with left-button 'paints' if in terrain-editing mode
+	(skip_lift == 0).
+
 	* gamerend.cc: Rendering in terrain-editing mode.
 	* gamemap.cc (Game_map): Clear 'modified' flag after writing terrain.
 	* objs/chunkter.cc:  Render_all() for terrain-editing mode.
